--- a/ios/Runner/zh-Hans.lproj/InfoPlist.strings
+++ b/ios/Runner/zh-Hans.lproj/InfoPlist.strings
@@ -5,3 +5,7 @@
   Created by philia on 2020/3/7.
   Copyright © 2020 The Chromium Authors. All rights reserved.
 */
+{
+"NSCameraUsageDescription" = "扫描二维码需要相机权限";
+
+}
