--- a/resources/langs/zh-CN.json
+++ b/resources/langs/zh-CN.json
@@ -239,7 +239,7 @@
         "about_page": {
             "title": "关于",
             "terms_and_privacy": "条款和隐私:",
-            "terms": "* Capo 是一款去中心化应用。其运作不依赖于特定的网络服务器或技术人员。您的资产安全的储存在 RChain 网络上，私钥是您的唯一资产凭证。\n* Capo 使用 scrpty 算法加密您的私钥和助记词，您的私钥和助记词以 keystore 文件的形式保存在设备上。\n* 您的职责是备份私钥和助记词并保证其安全,记住您的钱包密码。绝对不要向任何人展示私钥和助记词。如果丢失，遗忘或被盗，您的资金将会被拥有私钥，助记词的人使用。\n* 不要对您的手机进行越狱或 root ，不要安装来源不明(不可靠)的应用。\n* Capo 是一款完全开源的应用，遵守[MIT](https://github.com/imphila/Capo/blob/master/LICENSE)协议,您可以通过[GitHub](https://github.com/imphila/Capo)查看源代码。\n* 如您喜欢 Capo ,您可以点此 [捐赠](capo://icapo.app/balance/send) Capo 。"
+            "terms": "* Capo 是一款去中心化应用。其运作不依赖于特定的网络服务器或技术人员。您的资产安全的储存在 RChain 网络上，私钥是您的唯一资产凭证。\n* Capo 使用 Scrypt 算法加密您的私钥和助记词，您的私钥和助记词以 keystore 文件的形式保存在设备上。\n* 您的职责是备份私钥和助记词并保证其安全,记住您的钱包密码。绝对不要向任何人展示私钥和助记词。如果丢失，遗忘或被盗，您的资金将会被拥有私钥，助记词的人使用。\n* 不要对您的手机进行越狱或 root ，不要安装来源不明(不可靠)的应用。\n* Capo 是一款完全开源的应用，遵守[MIT](https://github.com/imphila/Capo/blob/master/LICENSE)协议,您可以通过[GitHub](https://github.com/imphila/Capo)查看源代码。\n* 如您喜欢 Capo ,您可以点此 [捐赠](capo://icapo.app/balance/send) Capo 。"
         }
     },
     "password_dialog": {
